Remove unused code

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "sample-test": "npx browserstack-node-sdk playwright test --config=./playwright.config.js",
-    "sample-local-test": "npx browserstack-node-sdk playwright test --config=./playwright.local.config.js",
+    "deloitte-test": "npx browserstack-node-sdk playwright test --config=./playwright.local.config.js",
     "postinstall": "npm update browserstack-node-sdk"
   },
   "keywords": [],
