--- a/browserstack.yml
+++ b/browserstack.yml
@@ -31,14 +31,14 @@ platforms:
     osVersion: 11
     browserName: chrome
     browserVersion: latest
-  # - os: OS X
-  #   osVersion: Ventura
-  #   browserName: playwright-webkit
-  #   browserVersion: latest
-  # - os: Windows
-  #   osVersion: 11
-  #   browserName: playwright-firefox
-  #   browserVersion: latest
+  - os: OS X
+    osVersion: Ventura
+    browserName: playwright-webkit
+    browserVersion: latest
+  - os: Windows
+    osVersion: 11
+    browserName: playwright-firefox
+    browserVersion: latest
 
 # =======================
 # Parallels per Platform
