--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "devDependencies": {
     "@playwright/test": "^1.48.2",
     "browserstack-node-sdk": "latest",
-    "eslint": "^9.14.0"
+    "eslint": "^9.14.0",
+    "log4js": "^6.9.1"
   },
   "dependencies": {
     "@cucumber/cucumber": "^11.0.1",
